Created Models, View, & Templates

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,12 @@
-<nav class="top-bar" data-topbar role="navigation">
-  <section class="top-bar-section">
-    <ul class="left">
-      <li class="name">
-        <a href="#posts">Posts Index</a>
-      </li>
-    </ul>
+<div class="hero-header"></div>
+
+<div class="search">
+  <section class="search-div">
+  <input class="search-menu" type="text" name="name" value="" placeholder="Search Menu Items">
   </section>
-</nav>
+</div>
+
+<div class="row">
+  <div class="medium-6 columns menu-container"></div>
+  <div class="medium-3 columns order-div"></div>
+</div>
