--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,12 +1,31 @@
-<div class="hero-header"></div>
+<div class="icon-bar five-up">
+
+</div>
+<div>
+  <div class="background-section"></div>
+</div>
 
 <div class="search">
+
   <section class="search-div">
   <input class="search-menu" type="text" name="name" value="" placeholder="Search Menu Items">
   </section>
+
 </div>
 
-<div class="row">
-  <div class="medium-6 columns menu-container"></div>
-  <div class="medium-3 columns order-div"></div>
+<div class="body-container row">
+
+<div class="menu-container small-9 columns">
+</div>
+
+<div class="order-container small-3 columns">
+</div>
+
+</div>
+
+<div class="footer-container">
+  <footer class="footer-nav">
+
+  </footer>
+
 </div>
